--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "src/app/(auth)/layout.tsz"
   ],
   "exclude": ["node_modules"]
 }
